                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-09-2005 added: dlls load referenced dlls when a dll is loaded
 - 25-09-2005 updated: Xboxmediacenter.xml, added .SPC to music extensions
 - 24-09-2005 fixed: Visualization NONE resulted in 1 logentry / frame
 - 24-09-2005 updated: kai-vectors.xml
 - 24-09-2005 changed: added more default paths for MyPrograms bookmarks (emulators/apps).
 - 24-09-2005 fixed: Potential crash in NSF codec.
 - 24-09-2005 added: SPC (Super NES sound file) codec for paplayer. Based on snes9x's APU.
 - 24-09-2005 added: New Screensaver: "Slideshow"! You can define the folder, where your pictures are.  Recursive Slideshow! [GeminiServer]
 - 23-09-2005 fixed: AlarmClock command parser.
 - 23-09-2005 fixed: Release build wouldn't compile due to missing file
 - 23-09-2005 fixed: very short wavs (< 1 second) could not be played (PAPlayer)
 - 23-09-2005 fixed: mono mp3's could not be played (PAPlayer, MadCodec.dll)
 - 23-09-2005 changed: [ 1286764 ] slightly modified, added E:\Games\ & G:\Games\ to Myprograms Games bookmark.
 - 23-09-2005 fixed: site help or any xbmc.* command without parameters had to be called as site() to work. alarmclock's parameters still has this "bug"
 - 23-09-2005 fixed: playback from daap bookmarks, mplayer is used as workaround
 - 23-09-2005 fixed: "skipnext" on the last item of a video playlist returns back to gui
 - 23-09-2005 fixed: queuing of stacked items in my video files view
 - 22-09-2005 added: support for prefix and suffix in regexp matching. (specific matches without removing what was matched from displayed name)
 - 22-09-2005 added: parameter validation for logpath